Prevent overflow when resizing page

--- a/src/styles/Favorites.css
+++ b/src/styles/Favorites.css
@@ -96,13 +96,17 @@
 }
 
 @media (max-width: 1150px) {
+  .worksList {
+    column-gap: 0;
+  }
+
   .thumbNails {
-    max-width: 250px;
+    width: 250px;
   }
 }
 
 @media (max-width: 1200px) and (orientation: landscape) {
   .worksList {
-    column-gap: 200px;
+    column-gap: 100px;
   }
 }
